--- a/CSS/main.css
+++ b/CSS/main.css
@@ -41,7 +41,7 @@ main {
 .parfum-description h1 {
   margin-top: 20px;
 
-  font-family: Frauncesw;
+  font-family: Fraunces;
   font-size: 32px;
   font-weight: 700;
   line-height: 32px;
